--- a/modules/fast-release/Cargo.toml
+++ b/modules/fast-release/Cargo.toml
@@ -4,12 +4,16 @@ version = "0.0.1"
 edition = "2021"
 
 [dependencies]
+clap = { version = "4.5.1", features = ["cargo"] }
 commonlib = { git = "https://github.com/toolbisoftware/commonlib-rs", version = "0.0.1", features = [
   "logger",
 ] }
 env_logger = "0.11.2"
+git2 = "0.18.2"
+glob = "0.3.1"
 lazy_static = "1.4.0"
 log = "0.4.20"
+regex = "1.10.3"
 serde = { version = "1.0.197", features = ["derive"] }
 serde_yaml = "0.9.32"
 tracing = "0.1.40"
